tests/files/type_checker_tests/should_pass/045.cmdr
//Test index lvalues type check
x = 1;
y = [1, 2, 3][(2.0, true, 3)[x]];
