tests/files/type_checker_tests/should_fail/088.cmdr
//Should fail index tuple if given index literal out of bounds
x = (1, 1.0, true)[3];
